package app.persistence;

public class CarportMapper {
}
