package app.persistence;

public class DesignCarportMapper {
}
