

-- This sipt was generated by the ERD tool in pgAdmin 4.
-- Please log an issue at https://github.com/pgadmin-org/pgadmin4/issues/new/choose if you find any bugs, including reproduction steps.
BEGIN;


CREATE TABLE IF NOT EXISTS public.material
(
    material_id serial NOT NULL,
    width integer NOT NULL,
    length integer NOT NULL,
    meter_price integer NOT NULL,
    description character varying(100) COLLATE pg_catalog."default" NOT NULL,
    unit character varying(20) COLLATE pg_catalog."default",
    group_id integer,
    CONSTRAINT material_pkey PRIMARY KEY (material_id)
);

CREATE TABLE IF NOT EXISTS public.order_line
(
    order_line_id serial NOT NULL,
    order_id integer NOT NULL,
    material_id integer NOT NULL,
    description character varying COLLATE pg_catalog."default" NOT NULL,
    quantity integer NOT NULL,
    CONSTRAINT order_line_pkey PRIMARY KEY (order_line_id)
);

CREATE TABLE IF NOT EXISTS public.order_status
(
    orderstatus_id serial NOT NULL,
    status_name character varying(25) COLLATE pg_catalog."default" NOT NULL,
    CONSTRAINT order_status_pkey PRIMARY KEY (orderstatus_id)
);

CREATE TABLE IF NOT EXISTS public.orders
(
    order_id serial NOT NULL,
    orderstatus_id integer NOT NULL,
    user_id integer NOT NULL,
    toolroom_width integer NOT NULL,
    toolroom_length integer NOT NULL,
    total_price integer NOT NULL,
    carport_width integer NOT NULL,
    carport_length integer NOT NULL,
    CONSTRAINT orders_pkey PRIMARY KEY (order_id)
);

CREATE TABLE IF NOT EXISTS public.payments
(
    order_id integer NOT NULL,
    payment_id serial NOT NULL,
    amount integer,
    CONSTRAINT payments_pkey PRIMARY KEY (payment_id)
);

CREATE TABLE IF NOT EXISTS public.users
(
    user_id serial NOT NULL,
    email character varying(50) COLLATE pg_catalog."default" NOT NULL,
    password character varying(50) COLLATE pg_catalog."default" NOT NULL,
    roles character varying(25) COLLATE pg_catalog."default" NOT NULL,
    adress character varying(25) COLLATE pg_catalog."default" NOT NULL,
    phonenumber character varying(25) COLLATE pg_catalog."default" NOT NULL,
    CONSTRAINT users_pkey PRIMARY KEY (user_id),
    CONSTRAINT unique_username UNIQUE (email)
);

ALTER TABLE IF EXISTS public.order_line
    ADD CONSTRAINT order_line_material_id_fkey FOREIGN KEY (material_id)
    REFERENCES public.material (material_id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.order_line
    ADD CONSTRAINT order_line_material_id_fkey1 FOREIGN KEY (material_id)
    REFERENCES public.material (material_id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.order_line
    ADD CONSTRAINT order_line_order_id_fkey FOREIGN KEY (order_id)
    REFERENCES public.orders (order_id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.order_line
    ADD CONSTRAINT order_line_order_id_fkey1 FOREIGN KEY (order_id)
    REFERENCES public.orders (order_id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.orders
    ADD CONSTRAINT orders_orderstatus_id_fkey FOREIGN KEY (orderstatus_id)
    REFERENCES public.order_status (orderstatus_id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.orders
    ADD CONSTRAINT orders_orderstatus_id_fkey1 FOREIGN KEY (orderstatus_id)
    REFERENCES public.order_status (orderstatus_id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.orders
    ADD CONSTRAINT orders_user_id_fkey FOREIGN KEY (user_id)
    REFERENCES public.users (user_id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.orders
    ADD CONSTRAINT orders_user_id_fkey1 FOREIGN KEY (user_id)
    REFERENCES public.users (user_id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION
    NOT VALID;


ALTER TABLE IF EXISTS public.payments
    ADD CONSTRAINT fk_order_id FOREIGN KEY (order_id)
    REFERENCES public.orders (order_id) MATCH SIMPLE
    ON UPDATE NO ACTION
    ON DELETE NO ACTION;

END;